Refactoring project to rename to WhichIp.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vectorface/iplookup",
+    "name": "vectorface/whip",
     "description": "A PHP class for retrieving accurate IP address information for the client.",
     "version": "0.1.0",
     "type": "library",
@@ -13,8 +13,8 @@
     ],
     "autoload": {
         "psr-0": {
-            "VectorFace\\IpLookup": "./src",
-            "VectorFace\\IpLookupTests:" "./tests"
+            "VectorFace\\WhichIp": "./src",
+            "VectorFace\\WhichIpTests:" "./tests"
         }
     },
     "require-dev": {
