Refactored classes and fixed composer.

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "autoload": {
         "psr-0": {
             "VectorFace\\WhichIp": "./src",
-            "VectorFace\\WhichIpTests:" "./tests"
+            "VectorFace\\WhichIpTests": "./tests"
         }
     },
     "require-dev": {
