--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,14 @@
             "VectorFace\\WhichIpTests": "./tests"
         }
     },
+    "homepage": "https://github.com/Vectorface/whip",
+    "support": {
+        "issues": "https://github.com/Vectorface/whip/issues",
+        "source": "https://github.com/Vectorface/whip"
+    },
+    "require": {
+        "php": ">=5.3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.2.*"
     }
