--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,7 @@ before_script:
   - composer self-update
   - composer install
 
-script: ./vendor/bin/phpunit
+script:
+ - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+ - wget https://scrutinizer-ci.com/ocular.phar
+ - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
