--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.2.*"
+        "phpunit/phpunit": "4.2.*",
+        "squizlabs/php_codesniffer": "1.*"
     }
 }
