--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 
 script:
  - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+ - ./vendor/bin/phpcs --standard=PSR2 src/ tests/
 
 after_script:
  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
