--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.2.*",
-        "squizlabs/php_codesniffer": "1.*",
+        "phpunit/phpunit": "~4.0",
+        "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0"
     }
 }
