--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "squizlabs/php_codesniffer": "~2.0",
-        "vectorface/dunit": "~2.0"
+        "vectorface/dunit": "~2.0",
+        "psr/http-message": "~1.0"
     }
 }
