--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ php:
   - 5.6
   - 5.5
   - 5.4
-  - 5.3
   - hhvm
 
 matrix:
   allow_failures:
     - php: hhvm
   fast_finish: true
+  include:
+    - php: 5.3
+      dist: precise
 
 before_script:
   - composer self-update
