--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,18 @@
         "source": "https://github.com/Vectorface/whip"
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "free2wait/composer-free2wait": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0",
         "psr/http-message": "~1.0"
+    },
+    "free2wait": {
+        "to": {
+            "paypal": "your.paypal.to.receive.payouts@example.com"
+        }
     }
 }
