--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "phpunit/phpunit": "~4.0",
         "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0",
-        "psr/http-message": "~1.0"
+        "psr/http-message": "~1.0",
+        "codeclimate/php-test-reporter": "dev-master"
     }
 }
