--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: php
 
 php:
+  - 7.3
   - 7.2
   - 7.1
   - 7.0
   - 5.6
   - 5.5
   - 5.4
-  - hhvm
+  - hhvm-3.30
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: hhvm-3.30
   fast_finish: true
   include:
     - php: 5.3
@@ -26,6 +27,6 @@ script:
  - ./vendor/bin/phpcs --standard=PSR2 src/ tests/
 
 after_script:
- - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
- - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi'
- - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then vendor/bin/test-reporter --coverage-report=coverage.clover; fi'
+ - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm-3.30" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
+ - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm-3.30" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi'
+ - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm-3.30" ]; then vendor/bin/test-reporter --coverage-report=coverage.clover; fi'
