--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,11 @@
     ],
     "autoload": {
         "psr-4": {
-            "Vectorface\\Whip\\": "./src",
-            "VectorFace\\Whip\\": "./src",
+            "Vectorface\\Whip\\": "./src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "Vectorface\\WhipTests\\": "./tests"
         }
     },
@@ -34,7 +37,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0",
         "psr/http-message": "~1.0",
