--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,13 @@
         "source": "https://github.com/Vectorface/whip"
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.6.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0",
-        "psr/http-message": "~1.0",
         "codeclimate/php-test-reporter": "dev-master"
     }
 }
