--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
         "source": "https://github.com/Vectorface/whip"
     },
     "require": {
-        "php": ">=5.6.0",
-        "psr/http-message": "^1.0"
+        "php": ">=8.0",
+        "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
