Drop travis, use latest phpunit

--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,8 @@
         "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "~2.0",
-        "vectorface/dunit": "~2.0",
-        "codeclimate/php-test-reporter": "dev-master"
+        "vectorface/dunit": "~2.0"
     }
 }
