--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,11 @@
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "~2.0",
         "vectorface/dunit": "~2.0"
+    },
+    "scripts": {
+        "test": [
+          "@test-unit"
+        ],
+        "test-unit": "phpunit --color=always"
     }
 }
