--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,17 @@
         "source": "https://github.com/Vectorface/whip"
     },
     "require": {
-        "php": ">=5.6.0",
-        "psr/http-message": "^1.0"
+        "php": ">=8.0",
+        "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "~2.0",
-        "vectorface/dunit": "~2.0",
-        "codeclimate/php-test-reporter": "dev-master"
+        "phpunit/phpunit": "^9.0",
+        "squizlabs/php_codesniffer": "~2.0"
+    },
+    "scripts": {
+        "test": [
+            "@test-unit"
+        ],
+        "test-unit": "phpunit --color=always"
     }
 }
